# waper

./: .coveragerc  .gitignore  CHANGELOG.rst  CONTRIBUTING.md  HISTORY.md  LICENSE  README.rst  environment.yml  pyproject.toml  tox.ini
.github/workflows/: test.yaml
conductor/: WAPER Architecture Algorithm Assessment and Improvements  architecture_and_algorithm.md  clustering_investigation_plan.md  phase_0_2_execution_plan.md  validation_strategy_plan.md  waper_refactoring_spec.md
datasets/: download_era5.ipynb  gt_sensitivity.py  penalty_sensitivity.py  sensitivity.py  souders_v_1.nc  souders_v_2.nc  v_winds_300mb_nh_2022_2023.nc  visualize.py
docs/: algorithm.md  conf.py  index.rst  malavika.md  spelling_wordlist.txt
docs/contents/: 10_introduction.rst  20_why_this_package.rst  30_usage.rst  40_modules.rst  my_new_project.rst
misc/: RWP_identification_functions.py
references/: pandey.md
scripts/: Tracking_final.ipynb  Tracking_final_Malavika.ipynb
src/waper/: max_min.py  topology.py  utils.py
src/waper/identification/: max_min.py  rwp_graph.py  topology.py  utils.py
src/waper/interface/: __init__.py  api.py  visualization.py
src/waper/tracking/: quadtree.py  rwp_polygon.py  tracking_graph.py
superpowers/plans/: 2026-03-17-phase-3.md  2026-03-20-phase-4.md  2026-03-21-hill-climbing-penalty.md
tests/: conftest.py  smoke_test.py  test_association_graph.py  test_clustering.py  test_integration.py  test_max_min.py  test_polygon.py  test_tracking.py  test_utils.py
waper/: __init__.py
waper/identification/: max_min.py  rwp_graph.py  topology.py  utils.py
waper/interface/: __init__.py  api.py  visualization.py
waper/tracking/: quadtree.py  rwp_polygon.py  tracking_graph.py
