# BUILD

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry

# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'
[tool.poetry]
name = "waper"
version = "0.1.0"
description = "Rossby wave packet tracker"
authors = ["Malavika Biju, Joy Monteiro and Karran Pandey"]
maintainers = ["Joy Monteiro <joy.merwin@gmail.com>"]
license = "BSD 3 clause"
readme = "README.rst"

homepage = "https://github.com/JoyMonteiro/waper"
repository = "https://github.com/JoyMonteiro/waper"
documentation = "https://waper.readthedocs.io/"

keywords = [
    "python package",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]

packages = [
    { include = "waper", from = "src" },
]

include = [
    { path = "tests", format = "sdist" },
    { path = "docs/**/*.rst", format = "sdist" },
    { path = "docs/conf.py", format = "sdist" },
    { path = "src/**/*.typed", format = "sdist" },
    { path = "src/stubs/*.pyi", format = "sdist" },
    "pyproject.toml",
    "LICENSE",
    "README.rst",
    "CONTRIBUTING.md",
    "CHANGELOG.rst",
]

exclude = [
    "docs/*",
    "requirements/*",
    "scripts/*.py",
    "tox.ini",
    ".bettercodehub.yml",
    ".circleci/config.yml",
    ".coveragerc",
    ".DS_Store",
    ".gitignore",
    ".prospector.yml",
    ".pylintrc",
    ".readthedocs.yml",
    ".scrutinizer.yml",
    ".travis.yml"
]

[tool.poetry.dependencies]
python = "^3.8"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.


# PyPi url links, that appear in 'Project Links' section
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/waper/issues"
"CI: Github Actions" = "https://github.com/JoyMonteiro/waper/actions"
"Documentation" = "https://waper.readthedocs.io/"
"Source Code" = "https://github.com/JoyMonteiro/waper"
"Changelog" = "https://github.com/JoyMonteiro/waper/blob/master/CHANGELOG.rst"
"Code of Conduct" = "https://github.com/JoyMonteiro/waper/blob/master/CONTRIBUTING.rst"


# TOOLS

[tool.software-release]
version_variable = "src/my_new_project/__init__.py:__version__"
