# BUILD

[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# Poetry

# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'
[project]
name = "waper"
version = "0.1.0"
description = "Rossby wave packet tracker"
authors = [{name="Malavika Biju"}, 
            {name="Joy Monteiro"},
            {name="Karran Pandey"}]
maintainers = [{name="Joy Monteiro", email="joy.merwin@gmail.com"}]
license = {file= "LICENSE"}
readme = "README.rst"
requires-python = ">= 3.9"

keywords = [
    "python package",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]

[tool.setuptools]
packages=["waper", "waper.identification", "waper.tracking", "waper.interface"]

#  [tool.setuptools.packages.find]
# {include = ["tests", 
#     "docs/**/*.rst",
#     "docs/conf.py", 
#     "src/**/*.typed", 
#     "src/stubs/*.pyi",
#     "pyproject.toml",
#     "LICENSE",
#     "README.rst",
#     "CONTRIBUTING.md",
#     "CHANGELOG.rst",
# ]},
# {exclude = [
#     ".github/*",
#     "docs/*",
#     "requirements/*",
#     "scripts/*.py",
#     "tox.ini",
#     ".bettercodehub.yml",
#     ".circleci/config.yml",
#     ".coveragerc",
#     ".DS_Store",
#     ".gitignore",
#     ".prospector.yml",
#     ".pylintrc",
#     ".readthedocs.yml",
#     ".scrutinizer.yml",
#     ".travis.yml"
# ]}]

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.


# PyPi url links, that appear in 'Project Links' section
[project.urls]
"Bug Tracker" = "https://github.com/waper/issues"
"CI: Github Actions" = "https://github.com/JoyMonteiro/waper/actions"
"Documentation" = "https://waper.readthedocs.io/"
"Source Code" = "https://github.com/JoyMonteiro/waper"
"Changelog" = "https://github.com/JoyMonteiro/waper/blob/master/CHANGELOG.rst"
"Code of Conduct" = "https://github.com/JoyMonteiro/waper/blob/master/CONTRIBUTING.rst"